# zigbee-plant-sensor

./: .gitignore  CMakeLists.txt  Kconfig  README.md  main.cpp  prj.conf  prj_debug.conf  sample.yaml
boards/: b_parasite.overlay
boards/arm/b-parasite/: b_parasite.dts  b_parasite.yaml  b_parasite_defconfig  board.cmake
boards/arm/b_parasite/: b_parasite-pinctrl.dtsi  b_parasite.dts  b_parasite.yaml  b_parasite_defconfig
docs/: firmware-flashing.md  zigbee2mqtt.md
include/: .battery.hpp.swp  adc.hpp  battery.hpp  buildin-led.hpp  light_sensor.hpp  moisture_sensor.hpp  status_codes.hpp  zb_plant_sensor.h  zb_zcl_soil_moisture.h  zigbee.hpp
src/: .battery.cpp.swp  adc.cpp  battery.cpp  buildin-led.cpp  light_sensor.cpp  main.cpp  moisture_sensor.cpp  status_codes.cpp  zb_zcl_soil_moisture.c  zigbee.cpp
zigbee2mqtt/: plant_sensor.js
